--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,35 @@
+name: Deploy to Azure VM and Run Node.js
+
+on:
+  push:
+    branches:
+      - main  # or the branch you want to trigger on
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Set up SSH key
         run: |
           mkdir -p ~/.ssh
-          # write the private key correctly
           echo "${{ secrets.AZURE_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
+        env:
+          AZURE_SSH_PRIVATE_KEY: ${{ secrets.AZURE_SSH_PRIVATE_KEY }}
 
-      - name: Add Azure VM to known_hosts
-        run: ssh-keyscan -H ${{ secrets.AZURE_VM_IP }} >> ~/.ssh/known_hosts
-
-      - name: Install Node.js & run index.js on VM
+      - name: Add Azure VM IP to known hosts
         run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa \
-            ${{ secrets.AZURE_SSH_USER }}@${{ secrets.AZURE_VM_IP }} << 'EOF'
-            # (optional) install Node.js if not already present
-            sudo apt-get update && sudo apt-get install -y nodejs
-            # run your script
-            node /path/to/index.js
-            EOF
+          ssh-keyscan -H ${{ secrets.AZURE_VM_IP }} >> ~/.ssh/known_hosts
+
+      - name: Install Node.js on Azure VM and Run `index.js`
+        run: |
+          ssh -i ~/.ssh/id_rsa ${{ secrets.AZURE_VM_USER }}@${{ secrets.AZURE_VM_IP }} << 'EOF'
+            cd /path/to/your/project  # Make sure this path points to where your project is located
+            git pull origin main  # If you want to pull the latest code
+            npm install  # Install dependencies
+            node index.js  # Run your Node.js script
+          EOF
