--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,38 @@
-name: Deploy to Azure VM and Run Node.js
+name: Deploy to Azure VM
 
 on:
   push:
-    branches:
-      - main  # or the branch you want to trigger on
+    branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Set up SSH key
+      - name: Set up SSH key file
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.AZURE_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-        env:
-          AZURE_SSH_PRIVATE_KEY: ${{ secrets.AZURE_SSH_PRIVATE_KEY }}
+          echo "" >> ~/.ssh/id_rsa          # ensure trailing newline
+          apt-get update && apt-get install -y dos2unix
+          dos2unix ~/.ssh/id_rsa            # normalize line endings
+          ssh-keygen -p -f ~/.ssh/id_rsa -m pem -N ""  # convert to PEM if needed
 
-      - name: Add Azure VM IP to known hosts
-        run: |
-          ssh-keyscan -H ${{ secrets.AZURE_VM_IP }} >> ~/.ssh/known_hosts
+      - uses: webfactory/ssh-agent@v0.7.4
+        with:
+          ssh-private-key: ${{ secrets.AZURE_SSH_PRIVATE_KEY }}
 
-      - name: Install Node.js on Azure VM and Run `index.js`
+      - name: Add VM to known hosts
+        run: ssh-keyscan -H ${{ secrets.AZURE_VM_IP }} >> ~/.ssh/known_hosts
+
+      - name: Deploy and run
         run: |
-          ssh -i ~/.ssh/id_rsa ${{ secrets.AZURE_VM_USER }}@${{ secrets.AZURE_VM_IP }} << 'EOF'
-            cd /path/to/your/project  # Make sure this path points to where your project is located
-            git pull origin main  # If you want to pull the latest code
-            npm install  # Install dependencies
-            node index.js  # Run your Node.js script
+          ssh ${{ secrets.AZURE_VM_USER }}@${{ secrets.AZURE_VM_IP }} << 'EOF'
+            cd /path/to/your/project
+            git pull origin main
+            npm install
+            node index.js
           EOF
