--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,21 @@
 name: Deploy to Azure VM
 
-on:
-  push:
-    branches: [ main ]
+on: [push]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up SSH key file
+      - name: Set up SSH private key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.AZURE_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          echo "" >> ~/.ssh/id_rsa          # ensure trailing newline
+          echo "" >> ~/.ssh/id_rsa                # ensure trailing newline
           apt-get update && apt-get install -y dos2unix
-          dos2unix ~/.ssh/id_rsa            # normalize line endings
+          dos2unix ~/.ssh/id_rsa                  # normalize line endings
           ssh-keygen -p -f ~/.ssh/id_rsa -m pem -N ""  # convert to PEM if needed
 
       - uses: webfactory/ssh-agent@v0.7.4
@@ -31,7 +28,7 @@ jobs:
       - name: Deploy and run
         run: |
           ssh ${{ secrets.AZURE_VM_USER }}@${{ secrets.AZURE_VM_IP }} << 'EOF'
-            cd /path/to/your/project
+            cd /opt/apps/my-node-app   # adjust to your separate folder
             git pull origin main
             npm install
             node index.js
