--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,22 @@
-name: Deploy Node.js app to Azure VM
-
-on:
-  push:
-    branches: [ main ]
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3                                      # fetch code :contentReference[oaicite:6]{index=6}
-
-    - name: Archive code outside workspace
+    - name: Set up SSH key
       run: |
-        mkdir -p ../artifact
-        rm -f ../artifact/release.tar.gz
-        tar czf ../artifact/release.tar.gz \
-          --exclude-vcs \
-          --warning=no-file-changed \
-          -C $GITHUB_WORKSPACE .
+        mkdir -p ~/.ssh
+        # write the private key
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        # auto-add the host to known_hosts (avoids prompt)
+        ssh-keyscan -p ${{ secrets.SSH_PORT || 22 }} ${{ secrets.AZURE_VM_HOST }} >> ~/.ssh/known_hosts
 
-    - name: Copy to Azure VM
-      uses: appleboy/scp-action@v0.1.7
-      with:
-        host: ${{ secrets.AZURE_VM_HOST }}
-        username: ${{ secrets.AZURE_VM_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        port: ${{ secrets.SSH_PORT || 22 }}
-        source: "../artifact/release.tar.gz"
-        target: "~/app/"
+    - name: Copy artifact to Azure VM
+      run: |
+        scp -P ${{ secrets.SSH_PORT || 22 }} ../artifact/release.tar.gz \
+            ${{ secrets.AZURE_VM_USERNAME }}@${{ secrets.AZURE_VM_HOST }}:~/app/
 
     - name: SSH and deploy
-      uses: appleboy/ssh-action@v0.1.7
-      with:
-        host: ${{ secrets.AZURE_VM_HOST }}
-        username: ${{ secrets.AZURE_VM_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        port: ${{ secrets.SSH_PORT || 22 }}
-        script: |
+      run: |
+        ssh -p ${{ secrets.SSH_PORT || 22 }} ${{ secrets.AZURE_VM_USERNAME }}@${{ secrets.AZURE_VM_HOST }} << 'EOF'
           cd ~/app
           tar xzf release.tar.gz
           npm install --production
           pm2 restart index.js --name my-app || pm2 start index.js --name my-app
+        EOF
